// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/panelContents/GraphPanel.vue snapshot no keyframe 1`] = `
<div
  class="graph-panel-wrapper"
>
  <div
    class="row-block"
  >
    
    <label
      class="label"
    >
      Value Scale
    </label>
    <div
      class="block-content"
    >
      
      <div
        class="slider-wrapper"
      >
        <div
          class="slider-background"
          style="transform: scaleX(0.47368421052631576);"
        />
        <input
          type="text"
        />
        <div
          class="slider-forward"
        />
        <!--v-if-->
      </div>
      
    </div>
    
  </div>
  <hr />
  <!--v-if-->
</div>
`;

exports[`src/components/panelContents/GraphPanel.vue snapshot with selected keyframe 1`] = `
<div
  class="graph-panel-wrapper"
>
  <div
    class="row-block"
  >
    
    <label
      class="label"
    >
      Value Scale
    </label>
    <div
      class="block-content"
    >
      
      <div
        class="slider-wrapper"
      >
        <div
          class="slider-background"
          style="transform: scaleX(0.47368421052631576);"
        />
        <input
          type="text"
        />
        <div
          class="slider-forward"
        />
        <!--v-if-->
      </div>
      
    </div>
    
  </div>
  <hr />
  
  <div
    class="row-block"
  >
    
    <label
      class="label"
    >
      Interpolation
    </label>
    <div
      class="block-content"
    >
      
      <span
        class="select-root"
      >
        <select>
          <!--v-if-->
          
          <option
            value="constant"
          >
            Constant
          </option>
          <option
            value="linear"
          >
            Linear
          </option>
          <option
            value="bezier3"
          >
            Bezier
          </option>
          
        </select>
      </span>
      
    </div>
    
  </div>
  <div
    class="row-block"
  >
    
    <label
      class="label"
    >
      Value
    </label>
    <div
      class="block-content"
    >
      
      <div
        class="slider-wrapper"
      >
        <div
          class="slider-background"
          style="transform: scaleX(0);"
        />
        <input
          type="text"
        />
        <div
          class="slider-forward"
        />
        <!--v-if-->
      </div>
      
    </div>
    
  </div>
  
</div>
`;
